refactoring and docs: update swagger and add generic function for response
